feat: implement codebase indexing, semantic search services, and project lifecycle management with virtual thread support